--- a/Praktek praktikum.html
+++ b/Praktek praktikum.html
@@ -1,1 +1,94 @@
-# Tugas-UAUX-4
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Alpukat</title>
+  <meta name="description" content="khasiat alpukat" />
+  <link rel="stylesheet" href="Alpukat.css" />
+</head>
+<body>
+  <header>
+    <h1>Alpukat Buah Nikmat Kaya Manfaat</h1>
+  </header>
+
+  <main>
+    <section class="intro">
+      <img src="images/alpukat.jpg" alt="buah alpukat" class="img" />
+      <p>
+        Alpukat merupakan jenis buah yang memiliki kandungan lemak tinggi,
+        sekitar 20 kali lebih tinggi dibanding buah-buahan lain. Nama latin tanaman
+        alpukat adalah <em>Persea americana</em>, diyakini berasal dari Amerika Tengah.
+        Buah ini dikenalkan ke Indonesia oleh Hindia Belanda sekitar tahun 1920–1930.
+      </p>
+      <p>
+        Di Indonesia, tanaman alpukat masih merupakan tanaman pekarangan, belum
+        dibudidayakan dalam skala usahatani. Daerah penghasil alpukat antara lain
+        Jawa Barat, Jawa Timur, sebagian Sumatera, Sulawesi Selatan, dan Nusa Tenggara.
+      </p>
+    </section>
+
+    <section class="deskripsi">
+      <p>
+        Pohon Alpukat dapat mencapai tinggi 20 m, dengan daun sepanjang 12–25 cm.
+        Bunganya berwarna hijau kekuningan dan berukuran kecil (5–10 mm). Buahnya
+        berukuran 7–20 cm dengan massa 100–1000 gram, serta memiliki biji besar
+        berdiameter sekitar 5–6,4 cm.
+      </p>
+      <img src="images/jusalpukat.png" alt="jus alpukat" class="img" />
+      <p>
+        Jus alpukat termasuk salah satu minuman yang banyak digemari. Buah hijau
+        ini dikenal lezat dan sehat. Menurut medicalnewstoday.com, alpukat mengandung
+        berbagai jenis vitamin, asam folat, magnesium, dan potassium. Cocok dikonsumsi
+        saat diet karena tidak menyebabkan kegemukan.
+      </p>
+      <p>
+        Dalam satu sajian buah alpukat (sekitar 50 gram) terdapat 80 kalori, 8 gram
+        lemak, 4 gram karbohidrat, dan 1 gram protein. Juga mengandung vitamin E, K,
+        B5, dan B6.
+      </p>
+    </section>
+
+    <section class="khasiat">
+      <h3>Berikut Khasiat Buah Alpukat:</h3>
+      <ol>
+        <li>Vitamin E – memiliki anti-aging alami untuk perawatan kulit.</li>
+        <li>Vitamin K – membantu mencegah osteoporosis.</li>
+        <li>Vitamin B5 – menurunkan stres dan meringankan rasa sakit.</li>
+        <li>Vitamin B6 – membantu mengatasi diabetes, insomnia, dan pendarahan menstruasi.</li>
+      </ol>
+    </section>
+
+    <section class="galeri">
+      <h3>Jenis Alpukat Populer</h3>
+      <div class="foto">
+        <img src="images/alpukat_miki.png" alt="alpukat miki" />
+        <img src="images/alpukat_mentega.png" alt="alpukat mentega" />
+        <img src="images/alpukat_kendil.png" alt="alpukat kendil" />
+        <img src="images/alpukat_aligator.png" alt="alpukat aligator" />
+      </div>
+    </section>
+
+    <section class="promo">
+      <h2>Penawaran Khusus untuk Anda!</h2>
+      <h3>
+        Harga 1 Kg: <del>Rp 35.000</del><br />
+        Sekarang hanya <strong>Rp 25.000</strong> saja!
+      </h3>
+      <p>Gimana? Tertarik?</p>
+    </section>
+
+    <section class="cod">
+      <p>
+        PEMBAYARAN DI TEMPAT (COD) hanya untuk Jakarta, Bekasi, dan Depok.<br />
+        POTONGAN ONGKIR Rp 5.000 untuk pembelian via transfer.
+      </p>
+    </section>
+
+    <div class="pesan">
+      <button id="tombol">PESAN SEKARANG</button>
+    </div>
+  </main>
+</body>
+</html>
+
