Add HTML structure for Burung Perkutut Jawa

--- a/Tugas praktikum.html
+++ b/Tugas praktikum.html
@@ -1,1 +1,109 @@
 
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Burung Perkutut Jawa</title>
+  <meta name="description" content="Budidaya Perkutut Jawa">
+  <link rel="stylesheet" href="Buwung.css">
+</head>
+<body>
+  <div id="header">
+    <h1>Perkutut Jawa Suara Emas Penghibur Hati</h1>
+    <blockquote>
+      Jikalau aku mendengarkan burung Perkutut menyanyi di pohon ditiup angin yang sepoi-sepoi,
+      bukan lagi aku mendengarkan burung Perkutut, Aku mendengarkan Indonesia. <br>
+      <span id="soekarno">Soekarno - Presiden RI I</span>
+    </blockquote>
+  </div>
+
+  <nav>
+    <ul>
+      <li><a href="#profil">Profil</a></li>
+      <li><a href="#beternak">Budidaya</a></li>
+      <li><a href="#harga">Harga</a></li>
+    </ul>
+  </nav>
+
+  <div class="gambar">
+    <img src="images/burung2.png" alt="Burung Perkutut Jawa">
+    <img src="images/burung1.png" alt="Burung Suara Emas">
+  </div>
+
+  <div class="isi">
+    <p>
+      Burung <span class="jawa">Perkutut Jawa</span> (<i>Geopelia striata</i>) bukan hanya burung yang mampu bersuara,
+      tetapi juga memiliki keunikan tersendiri. Para pecinta burung bahkan dapat menebak kualitas suaranya hanya dari bentuk tubuhnya.
+      Burung ini biasa bertengger di kebun atau ladang dan mencari makan di jalan yang sepi.
+    </p>
+    <p>
+      Perkutut Jawa hidup berpasangan atau dalam kelompok kecil. Mereka makan di permukaan tanah
+      dan sering berkumpul untuk minum di sumber air. Sarangnya datar tipis terbuat dari ranting.
+      Telurnya berwarna putih, berjumlah dua butir, dan biasanya berbiak antara Januari hingga September.
+    </p>
+  </div>
+
+  <div id="profil">
+    <h3>Profil Perkutut Jawa</h3>
+    <ul>
+      <li>Ukuran tubuh sedang (20–25 cm) dengan kepala membulat dan ekor pendek.</li>
+      <li>Umumnya dipelihara karena suaranya yang khas dan dipercaya membawa keberuntungan.</li>
+      <li>Memiliki pola garis-garis indah di bagian dada dan sayap.</li>
+      <li>Memakan biji rumput, gulma, dan serangga kecil — bermanfaat sebagai pengontrol alami gulma.</li>
+    </ul>
+  </div>
+
+  <div id="beternak">
+    <h3>Cara Beternak Perkutut Jawa</h3>
+    <ol>
+      <li>
+        <h4>Pemilihan Bibit</h4>
+        <p>Pilih indukan berumur minimal 4 bulan, sebaiknya betina lebih tua dari jantan, dan tampak aktif serta sehat.</p>
+      </li>
+      <li>
+        <h4>Persiapan Kandang</h4>
+        <p>
+          Kandang sebaiknya berukuran 100–180 cm panjang, 60 cm lebar, dan tinggi 45–180 cm.
+          Lantai dibuat dari pasir atau tanah, atapnya dari genting atau asbes.
+        </p>
+      </li>
+      <li>
+        <h4>Proses Perjodohan</h4>
+        <p>
+          Masukkan jantan dan betina ke dalam kandang sore hari setelah diberi makanan bergizi seperti kacang hijau,
+          minyak ikan, dan vitamin E.
+        </p>
+      </li>
+      <li>
+        <h4>Pemeliharaan Anakan</h4>
+        <p>
+          Pisahkan anakan usia 1–1,5 bulan dari induk. Tempatkan dalam kandang ukuran 50x70x50 cm dengan isi 8–10 ekor.
+        </p>
+      </li>
+    </ol>
+  </div>
+
+  <div class="koleksi">
+    <img src="images/burung4.png" alt="Burung Koleksi 1">
+    <img src="images/burung3.png" alt="Burung Koleksi 2">
+    <img src="images/burung5.png" alt="Burung Koleksi 3">
+    <img src="images/burung6.png" alt="Burung Koleksi 4">
+  </div>
+
+  <div class="promo" id="harga">
+    <h2>Tertarik Budidaya atau Memelihara Perkutut Jawa?</h2>
+    <h3>Penawaran Khusus!</h3>
+    <p>Harga 1 ekor perkutut remaja <del>Rp 75.000</del> kini hanya <strong>Rp 50.000</strong>!</p>
+    <p>Hubungi kami di <span id="Wa">WA: 0124-555-88222</span></p>
+
+    <h4>Tersedia juga di:</h4>
+    <ol>
+      <li><a href="https://tokopedia.com">Tokopedia</a></li>
+      <li><a href="https://bukalapak.com">Bukalapak</a></li>
+      <li><a href="https://shopee.com">Shopee</a></li>
+    </ol>
+  </div>
+</body>
+</html>
+  
